messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
        - name: django-messaging-app
          image: gemgeek/django-messaging-app:latest
          ports:
            - containerPort: 8000
