messaging_app/messaging_app/deployment.yaml
# --- Kubernetes Deployment for the Django App ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-messaging-app
          image: gemgeek/django-messaging-app:latest
          ports:
            - containerPort: 8000

---

# --- Kubernetes Service to Expose the Django App ---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
