messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  type: ClusterIP
  selector:
    # Initially, traffic is directed to the BLUE version.
    app: django-app
    version: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
