messaging_app/messaging_app/ingress.yaml
# --- Kubernetes Ingress Resource ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-app-service
            port:
              number: 8000
